# FUNKI_gui

./: Main.py  README.md
Workflows/standard-workflows/docs/: _config.yml  _toc.yml  analysis_params.json  api_analysis_params.rst  pyproject.toml  standard_workflows.analysis_params.rst  standard_workflows.gui.rst  standard_workflows.sc_analysis_baseclass.rst  standard_workflows.sc_decoupler_utility.rst  style.css
Workflows/standard-workflows/docs/MBEN_T/: analysis_params.py  analysis_params.yaml
Workflows/standard-workflows/docs/_build/.doctrees/: README.doctree  api.doctree  api_analysis_params.doctree  environment.pickle  standard_workflows.analysis_params.doctree  standard_workflows.doctree  standard_workflows.gui.doctree  standard_workflows.sc_analysis_baseclass.doctree  standard_workflows.sc_analysis_loops.doctree  standard_workflows.sc_decoupler_utility.doctree  standard_workflows.scfunctions.doctree
Workflows/standard-workflows/docs/_build/.jupyter_cache/: global.db
Workflows/standard-workflows/docs/_build/html/: .buildinfo  README.html  api.html  api_analysis_params.html  decoupler_main.html  genindex.html  objects.inv  py-modindex.html  search.html  standard_workflows.analysis_params.html  standard_workflows.gui.html  standard_workflows.html  standard_workflows.sc_analysis_baseclass.html  standard_workflows.sc_analysis_loops.html  standard_workflows.sc_decoupler_utility.html  standard_workflows.scfunctions.html
Workflows/standard-workflows/docs/_build/jupyter_execute/: decoupler_main.py  (+1 more)
Workflows/standard-workflows/docs/_static/: customStyle.css
(+26 files in other folders)
